--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
+
     
     <script src="https://kit.fontawesome.com/f478418874.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
